feature create post

--- a/src/index.css
+++ b/src/index.css
@@ -326,3 +326,14 @@ input[type='number'] {
 button {
     cursor: pointer;
 }
+
+.scroll-hide::-webkit-scrollbar {
+    display: none;
+}
+
+.scroll-hide {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
